@@ -1,3 +1,7 @@
+2011-10-18  Valek Filippov
+
+		* MDB: added initial support, ported some data from mdbtools.
+
 2011-10-14  Valek Filippov
 
 		* XLS: save/insert/more/less implemented
